SERVER-38751 Make _migrateClone and _transferModes requests use kNoRetry policy